Fix alignment in composer preview

--- a/common/common.scss
+++ b/common/common.scss
@@ -4,4 +4,5 @@ aside.onebox .onebox-body .github-status-indicator {
   object-fit: contain;
   object-position: left;
   margin: 0;
+  padding: 0;
 }
